fix event card overlap on mobile screen

--- a/src/views/EventPage/EventPage.scss
+++ b/src/views/EventPage/EventPage.scss
@@ -8,12 +8,10 @@
   .eventpage {
     &__header {
       width: 100%;
-      height: 37%;
       overflow: hidden;
       border-bottom: rem(1px) solid $gray-3;
       &-top {
         background-color: $white;
-        height: 80%;
         width: 100%;
         display: flex;
         justify-content: center;
@@ -169,7 +167,7 @@
         }
       }
       &-bottom {
-        height: 20%;
+        height: rem(50px);
         display: flex;
         justify-content: center;
         align-items: flex-end;
@@ -199,7 +197,6 @@
     }
     &__content {
       width: 100%;
-      height: 63%;
       overflow-y: scroll;
       overflow-x: hidden;
       display: flex;
@@ -235,7 +232,7 @@
             overflow: hidden;
             .text {
               font-family: $primary-font;
-              font-size: rem(18px);
+              font-size: rem(14px);
               font-weight: bold;
               color: $primary-color;
               text-transform: capitalize;
